testsuite/tests/parser/should_fail/T18251c.stderr

T18251c.hs:3:5: error:
    Illegal visible type application ‘@Int’
      Perhaps you intended to use TypeApplications
